# ai-learning

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.md  _t_costbody.json  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
agent/: inbox.py  outcome.py  review.py
ai_scout/: __init__.py
builder/: inbox.py  outcome.py  review.py
config/: content.yml  curate.json  eval.json  feedback.json  flags.json  models.json  personalization.json  proposals.yml  reel.json  sources.opml  sources.yml  tags.json  users.json
docs/: architecture.md  deep-research-report.md  long-term-vision-and-production.md  p0-review.md  reel-visuals-plan.md  runbook.md
drafts/: .gitkeep  2026-06-15-review.md
function/: .funcignore  function_app.py  requirements.txt
infra/: README.md  grafana-dashboard.json  main.bicep  main.bicepparam  workbook.json
prism/: __init__.py
reelforge/: __init__.py
tests/: __init__.py  test_architecture.py  test_blob.py  test_brief.py  test_curate.py  test_discover.py  test_draft.py  test_edition.py  test_embed.py  test_eval.py  test_explore.py  test_feedback.py  test_fetch.py  test_function.py  test_gateway.py  test_metrics.py  test_migrate.py  test_profiles.py  test_provisioning.py  test_reel.py  test_reel_visuals.py  test_reelforge.py  test_restore.py  test_review.py  test_select.py  test_self_review.py  test_settings.py  test_sinks.py  test_source_quality.py  test_synthesis.py  test_taste.py  test_text.py  test_topics.py  test_vectors.py
tools/: curate.py  digest.py  rank.py  (+14 more)
(+143 files in other folders)
