[project]
name = "ai-scout"
version = "0.1.0"
description = "Owned, passwordless, cost-efficient AI/LLM scanning + ranking + personalized delivery pipeline."
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["ai_scout*"]

[tool.setuptools.package-data]
"ai_scout.services" = ["templates/*.j2"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
