[project]
name = "prism"
version = "0.1.0"
description = "Owned, passwordless, pluggable intelligence engine: scan sources, rank for signal, personalize, and deliver — one topic pack at a time."
requires-python = ">=3.13"
dynamic = ["dependencies"]

[project.scripts]
prism-sync = "prism.cli.sync:main"
prism-evaluate = "prism.cli.evaluate:main"
prism-restore = "prism.cli.restore:main"

[tool.setuptools.packages.find]
include = ["prism*", "reelforge*"]

[tool.setuptools.package-data]
"prism.services" = ["templates/*.j2"]
"reelforge" = ["assets/fonts/*.ttf", "assets/fonts/*.txt", "assets/music/*.mp3"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
